crates/reinhardt-forms/crates/macros/tests/ui/fail/validator_unknown_field.stderr
error: form! macro is not yet implemented
  --> tests/ui/fail/validator_unknown_field.rs:8:15
   |
8  |       let _form = form! {
   |  _______________^
9  | |         fields: {
10 | |             username: CharField {},
11 | |         },
12 | |         validators: {
...  |
16 | |         },
17 | |     };
   |  |_____^
   |
   = note: this error originates in the macro `form` (in Nightly builds, run with -Z macro-backtrace for more info)
